# rclip

./: .all-contributorsrc  .dockerignore  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  Pipfile  README.md  appimage-builder.yml  appimage_after_bundle.sh  log-original.txt  log.txt  my_diff.txt  pyproject.toml  pyrightconfig.json  rclip.rb  setup.cfg  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/lint/: action.yaml
.github/actions/test-system-rclip/: action.yaml
.github/actions/test-system-rclip-windows/: action.yaml
.github/workflows/: build-appimage.yaml  build.yaml  lint.yaml  release.yaml  test-latest-stable-release.yaml  validate.yaml
benchmarks/: benchmark-cifar.py  benchmark-imagenet.py  benchmark-int8-quantization.py  benchmark-visual-models.py  config.py  imagenet-1k-vector-multiplier.py  similarity_search.py
rclip/: __main__.py  config.py  const.py  db.py  fs.py  main.py  merge_dbs.py  model.py  model_download.py  rclip.py  rclip_merge_dbs.py  snap_utils.py  utils.py
rclip/utils/: download_progress.py  helpers.py  preprocess.py  preview.py  snap.py  tokenizer.py
release-utils/appimage/: appimage-builder.yml  appimage_after_bundle.sh  build_appimage.sh
release-utils/homebrew/: generate_formula.py  release.sh
release-utils/windows/: LICENSE.rtf  build-installer.iss  build-msi.ps1  environment.iss  pyinstaller.spec  template.aip
scripts/: convert_model.py
snap/: snapcraft.yaml
tests/: conftest.py
tests/e2e/: gen_img.py  test_rclip.py
tests/e2e/images/: bee.heic  bee.jp2  bee.pbm  bee.pgm  bee.ppm  bee.tif  black_cat_sleeping.tiff  boats_on_a_lake.pnm  camera.ppm  camera_lens.pnm  chess-knight.tiff  duck.jp2  kookaburras.pnm  magpie.pbm  not-an-image.txt  parrot-and-flowers.pgm  parrot-looks-into-the-camera.ppm
tests/e2e/images raw/: DSC08882.ARW  RAW_CANON_400D_ARGB.CR2  README.md  boats on a lake.ARW
tests/e2e/output_snapshots/: test_add_and_subtract_queries.txt  test_add_queries.txt  test_can_read_arw_images.txt  test_can_read_cr2_images.txt  test_can_read_dng_images.txt  test_combine_image_query_with_text_query.txt  test_combine_text_query_with_image_query.txt  test_handles_addition_and_deletion_of_images.txt  test_ignores_raw_files_if_raw_support_is_disabled.txt  test_ignores_raw_if_there_is_a_png_named_the_same_way_in_the_same_dir.txt  test_query_multipliers.txt  test_repeated_searches_should_be_the_same.txt  test_seach_dir_with_deeply_nested_directories.txt  test_seach_dir_with_multiple_nested_directories.txt  test_seach_empty_dir.txt  test_search.txt  test_search_animated_gif.txt  test_search_by_image.txt  test_search_by_image_from_url.txt  test_search_by_non_existing_file.txt  test_search_by_not_an_image.txt  test_search_dir_with_deeply_nested_directories.txt  test_search_dir_with_multiple_nested_directories.txt  test_search_format[bmp].txt  test_search_format[gif].txt  test_search_format[heic].txt  test_search_format[jp2].txt  test_search_format[pbm].txt  test_search_format[pgm].txt  test_search_format[png].txt  test_search_format[pnm].txt  test_search_format[ppm].txt  test_search_format[tiff].txt  test_search_format[webp].txt  test_search_heic.txt  test_search_png.txt  test_search_webp.txt  test_subtract_queries.txt  test_unicode_filepaths.txt
tests/integration/: test_model_inference.py
tests/unit/: test_cli_flags.py  test_db.py  test_generate_formula.py  test_index_files.py  test_index_images.py  test_max_image_pixels.py  test_merge_dbs.py  test_model.py  test_preview.py
