[tool.poetry]
name = "rclip"
version = "2.1.5"
description = "AI-Powered Command-Line Photo Search Tool"
authors = ["Yurij Mikhalevich <yurij@mikhalevi.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yurijmikhalevich/rclip"
keywords = ["image search", "computer vision", "photography"]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.10 <3.15"
ftfy = "^6.1"
huggingface-hub = ">=0.20"
numpy = "~2.1.3"
onnxruntime = ">=1.17"
pillow = "^12.0.0"
pillow-heif = "^1.1.1"
regex = ">=2024.1"
requests = "~=2.32"
tqdm = "^4.65.0"
rawpy = "^0.26.1"

[tool.poetry.group.dev.dependencies]
pyright = {extras = ["nodejs"], version = "^1.1.394"}
pytest = ">=7.2.1,<8.0"
ruff = "^0.9.7"
jinja2 = "^3.1.5"

[tool.poetry.scripts]
rclip = "rclip.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.ruff]
line-length = 120
indent-width = 2
exclude = ["AppDir", "appimage-builder-cache", "benchmarks/datasets"]
