[project]
name = "rclip"
version = "3.2.3"
description = "Semantic photo search for the command line"
authors = [{ name = "Yurij Mikhalevich", email = "yurij@mikhalevi.ch" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "image search",
    "computer vision",
    "photography",
    "ai",
    "semantic search",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "coremltools>=9.0,<10 ; sys_platform == 'darwin'",
    "ftfy>=6.3.1,<7",
    "huggingface-hub>=1.9.0,<2",
    "numpy~=2.1.3",
    "onnxruntime>=1.24.4,<2",
    "pillow>=12.0.0,<13",
    "pillow-heif>=1.1.1,<2",
    "regex~=2026.4.4",
    "requests~=2.32",
    "tqdm>=4.65.0,<5",
    "rawpy>=0.26.1,<0.27",
]

[project.urls]
Repository = "https://github.com/yurijmikhalevich/rclip"

[project.scripts]
rclip = "rclip.main:main"

[dependency-groups]
dev = [
    "coremltools>=9.0,<10 ; sys_platform != 'win32'",
    "open_clip_torch>=3.2.0,<4",
    "pytest>=7.2.1,<10.0",
    "ruff>=0.9.7,<0.10",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "ty==0.0.34",
    "jinja2>=3.1.5,<4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
indent-width = 2
exclude = ["AppDir", "appimage-builder-cache", "benchmarks/datasets"]

[tool.ty.src]
exclude = ["AppDir", "appimage-builder-cache", "benchmarks/datasets"]

[tool.ty.terminal]
error-on-warning = true
